Blog Creation and editing done

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
-    "@tiptap/react": "^3.0.9",
-    "@tiptap/starter-kit": "^3.0.9",
+    "@tinymce/tinymce-react": "^6.3.0",
     "appwrite": "^18.1.1",
     "html-react-parser": "^5.2.6",
     "lucide-react": "^0.536.0",
